fix spacing

--- a/themes/computer-lab/source/css/pages/_bloglist.scss
+++ b/themes/computer-lab/source/css/pages/_bloglist.scss
@@ -44,7 +44,7 @@ ul.post-items {
   -webkit-padding-start: 0px;
 
   li.post-item {
-    margin: $base-spacing * 5 0;
+    margin: 0;
     list-style: none;
 
     p {
